# metis-sdk

./: .gitignore  Cargo.toml  Makefile  README.md
.github/release/: cl.Dockerfile
.github/workflows/: bench.yaml  blocktest.yaml  eelstest.yaml  ethertest.yaml  hive.yml  image.yaml  k8s.yaml  lint.yaml  prepare-metis.yml  release.yaml  rpctest.yaml  stage.yaml  synctest.yaml  typos.yaml  unit.yaml  windows.yaml
crates/chain/: Cargo.toml  README.md  build.rs
crates/chain/docs/: CHAIN.md
crates/chain/src/: exex.rs  hook_provider.rs  lib.rs  node.rs  op_provider.rs  parallel_execution_context.rs  parallel_payload_builder.rs  provider.rs  state.rs  state_accumulator.rs  utils.rs
crates/chain/tests/: common.rs  custom_evm_node.rs  mainnet.rs  parallel_evm_node.rs  receipt.rs  sequential_evm_node.rs  transfer.rs  withdraw.rs
crates/chain/tests/common/: node.rs
crates/exex/: Cargo.toml
crates/exex/src/: config.rs  executor.rs  hard_forks.rs  lib.rs  utils.rs
crates/exex/src/types/: lib.rs  state_notification.rs
crates/exex/types/: Cargo.toml
crates/exex/types/src/: finished_heigths.rs  head.rs  notification.rs
crates/hook/: Cargo.toml
crates/hook/src/: evm.rs  exec.rs  handler.rs  lib.rs
crates/pe/: Cargo.toml  README.md
crates/pe/benches/: README.md  gigagas.rs  mainnet.rs
crates/pe/src/: chain.rs  compat.rs  db.rs  executor.rs  lib.rs  mv_memory.rs  new_scheduler.rs  op_executor.rs  op_vm.rs  result.rs  scheduler.rs  schedulers.rs  storage.rs  types.rs  vm.rs
crates/pe/src/chain/: ethereum.rs  optimism.rs
crates/pe/src/storage/: in_memory.rs  rpc.rs
crates/pe/tests/: beneficiary.rs  mainnet.rs  mixed.rs  raw_transfers.rs  small_blocks.rs  snapshot_data.rs
crates/pe/tests/common/: mod.rs  runner.rs  storage.rs
crates/pe/tests/erc20/: contract.rs  main.rs  mod.rs
crates/pe/tests/uniswap/: contract.rs  main.rs  mod.rs
crates/pevm/: Cargo.toml  build.rs
crates/pevm/benches/: gigagas.rs
crates/pevm/src/: pevm.rs  storage.rs  vm.rs
crates/pevm/src/chain/: ethereum.rs  optimism.rs
crates/pevm/src/storage/: in_memory.rs  rpc.rs
crates/pevm/tests/common/: runner.rs
crates/pevm/tests/erc20/: mod.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/bins/blocktest/: main.rs
crates/tools/bins/blocktrace/: main.rs
crates/tools/bins/eelstest/: main.rs
crates/tools/bins/ethertest/: main.rs
crates/vm/: Cargo.toml  README.md
crates/vm/examples/: aot_compiler.rs  compiler.rs  inference.rs  interpreter.rs  interpretor.rs  jit_compiler.rs
crates/vm/src/: analysis.rs  compiler.rs  error.rs  hotcode.rs  inference.rs  lib.rs  pool.rs  runtime.rs  tests.rs
devops/: .compose.yaml.swp  README.md  compose.yaml
devops/ansible/: README.md  ansible.cfg  lazai.yml
devops/ansible/roles/lazai/: .gitignore
devops/ansible/roles/lazai/defaults/: main.yml
devops/ansible/roles/lazai/files/opt/nodes/_node_/: backup.sh  start.sh  stop.sh
devops/ansible/roles/lazai/handlers/: main.yml
devops/ansible/roles/lazai/tasks/: docker.yml  lazai.yml  main.yml  node_exporter.yml  sysctl.yml  ufw.yml
devops/ansible/roles/lazai/templates/: node_exporter.service.j2
devops/ansible/roles/lazai/templates/etc/logrotate.d/: lazai.j2
devops/ansible/roles/lazai/templates/etc/sysctl.d/: lazai.conf.j2
devops/ansible/roles/lazai/templates/opt/nodes/_node_/: compose-blockscout.yaml.j2  compose-rpc-mala.yaml.j2  compose-rpc-reth-init.yaml.j2  compose-rpc-reth.yaml.j2  compose-seq-mala.yaml.j2  compose-seq-reth-init.yaml.j2  compose-seq-reth.yaml.j2
devops/ansible/roles/lazai/templates/opt/nodes/_node_/mala/config/: config.toml.j2
devops/compose/lazai/mainnet/: README.md  compose-mala.yaml  compose-reth.yaml  init.sh  start.sh  stop.sh
devops/compose/lazai/mainnet/mala/data/config/: config.toml
devops/configs/node/config/: config.toml
devops/k8s/: genesis-configmap.yaml  kustomization.yaml
devops/k8s/node1/: node_configs.yaml  statefulset.yaml
devops/k8s/node2/: node_configs.yaml  statefulset.yaml
devops/k8s/node3/: node_configs.yaml  statefulset.yaml
example/test-local-chain/from_docker/: compose-mala.yaml  compose.yaml  stop_and_clean.sh
example/test-local-chain/from_docker/assets/: genesis.json
example/test-local-chain/from_docker/nodes_config_bin/0/config/: config.toml
example/test-local-chain/from_docker/nodes_config_bin/1/config/: config.toml
example/test-local-chain/from_docker/nodes_config_bin/2/config/: config.toml
example/test-local-chain/from_docker/rethdata/0/: discovery-secret
examples/custom_evm/: Cargo.toml
examples/custom_evm/src/: main.rs
website/: README.md  next.config.mjs  package-lock.json  package.json
website/content/docs/: meta.json  start.mdx  start_with_consensuse.mdx
website/content/docs/architecture/: index.mdx  meta.json  val.mdx
website/content/docs/architecture/validator/: crate.mdx  create.mdx  meta.json  overview.mdx
website/content/docs/bridge/: hyperlane.mdx  meta.json  metadata.json
