[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
metis-vm = { path = "crates/vm" }
metis-primitives = { path = "crates/primitives" }

alloy-primitives = "0.8.23"
alloy-sol-types = { version = "0.8.24", default-features = false, features = [
    "std",
] }
anyhow = "1.0.97"
thiserror = "2.0.12"
rustc-hash = { version = "2.1.1"}
tokio = { version = "1.44.1", features = ["full"] }

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
exclude = [".github/"]
license = "Apache-2.0"
readme = "README.md"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
rpath = true
panic = "unwind"
