[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = "warn"
rust.unreachable_pub = "warn"

[workspace.lints.clippy]
cloned_instead_of_copied = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
explicit_iter_loop = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
match_same_arms = "warn"
missing_const_for_fn = "warn"
redundant_clone = "warn"
redundant_else = "warn"
type_repetition_in_bounds = "warn"
unnested_or_patterns = "warn"
use_self = "warn"

[workspace.dependencies]
metis-vm = { path = "crates/vm" }
metis-primitives = { path = "crates/primitives" }
metis-pe = { path = "crates/pe", features = ["full"] }
metis-chain = { path = "crates/chain" }

anyhow = "1.0.97"

# alloy
alloy-chains = "0.1.69"
alloy-consensus = "0.9.2"
alloy-primitives = { version = "0.8.25", features = [
  "asm-keccak",
  "map-fxhash",
] }
alloy-sol-types = { version = "0.8.25", default-features = false, features = [
    "std",
] }
alloy-provider = "0.9.2"
alloy-rlp = "0.3.10"
alloy-rpc-types-eth = "0.9.2"
alloy-transport = "0.9.2"
alloy-transport-http = "0.9.2"
alloy-trie = "0.7.8"

revm = { version = "20.0.0", features = ["std", "serde-json"] }
op-revm = { version = "1.0.0" }
# OP
op-alloy-consensus = "0.9.6"
op-alloy-network = "0.9.2"
op-alloy-rpc-types = "0.9.2"

# Allocators
rpmalloc = { version = "0.2.2", features = ["thread_cache", "global_cache"] }
snmalloc-rs = "0.3.7"
tikv-jemallocator = "0.6.0"

bincode = "1.3.3"
# We can roll our own but [revm] depends on this anyway.
bitflags = "2.7.0"
bitvec = "1.0.1"
clap = { version = "4.5.34", features = ["derive"] }
color-eyre = "0.6.3"
criterion = "0.5.1"
dashmap = "6.1.0"
flate2 = "1.0.35"
hashbrown = "0.15.2"
rand = "0.9.0"
rayon = "1.10.0"
reqwest = "0.12.12"
rustc-hash = "2.1.1"
serde = "1.0.217"
serde_json = "1.0.135"
smallvec = "1.13.2"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
walkdir = "2.5.0"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
exclude = [".github/"]
license = "Apache-2.0"
readme = "README.md"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
rpath = true
panic = "unwind"
