[workspace.package]
version = "0.7.2"
edition = "2024"
rust-version = "1.88"
exclude = [".github/"]
license = "Apache-2.0"
readme = "README.md"

[workspace]
members = [
  "crates/*",
]

resolver = "2"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2024_incompatible_pat = "warn"
rustdoc.all = "warn"

[workspace.lints.clippy]
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
dbg_macro = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
missing-const-for-fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
result_large_err = "allow"
redundant_clone = "warn"
redundant_else = "warn"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
zero_sized_map_values = "warn"

# These are nursery lints which have findings. Allow them for now. Some are not
# quite mature enough for use in our codebase and some we don't really want.
# Explicitly listing should make it easier to fix in the future.
as_ptr_cast_mut = "allow"
cognitive_complexity = "allow"
debug_assert_with_mut_call = "allow"
fallible_impl_from = "allow"
future_not_send = "allow"
needless_collect = "allow"
non_send_fields_in_send_ty = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"
too_long_first_doc_paragraph = "allow"

[workspace.dependencies]
metis-vm = { path = "crates/vm" }
metis-primitives = { path = "crates/primitives" }
metis-pe = { path = "crates/pe" }
metis-chain = { path = "crates/chain" }
metis-hook = {path = "crates/hook" }

anyhow = "1.0.99"

# Alloy and Revm dependencies
alloy-consensus = { version = "1.0.41", default-features = false }
alloy-primitives = { version = "1.4.1", default-features = false, features = [
  "asm-keccak",
  "map-foldhash",
] }
alloy-sol-types = { version = "1.4.1", default-features = false, features = [
  "std",
] }
alloy-eips = { version = "1.0.41", default-features = false }
alloy-provider = { version = "1.0.41", features = [
  "reqwest",
], default-features = false }
alloy-rlp = { version = "0.3.10", features = ["core-net"] }
alloy-rpc-types-eth = "1.0.41"
alloy-rpc-types-engine = "1.0.41"
alloy-hardforks = "0.4.4"

alloy-trie = { version = "0.9.1", default-features = false }
alloy-evm = { version = "0.23.0", default-features = false }
alloy-genesis = { version = "1.0.41", default-features = false }
revm = { version = "31.0.2", default-features = false, features = [
  "std",
  "serde-json",
] }

# OP Alloy and OP Revm dependencies
alloy-op-evm = { version = "0.23.0"}
op-alloy-consensus = { version = "0.22.0"}
op-alloy-network = { version = "0.22.0" }
op-alloy-rpc-types = { version = "0.22.0"}
op-alloy-rpc-types-engine = { version = "0.22.0", features = ["serde"] }
op-revm = { version = "12.0.2"}

# Reth dependencies
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", features = [
  "full",
] }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", features = [
  "test-utils",
] }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-stages = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }

# OP Reth dependencies
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-optimism-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-optimism-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-optimism-forks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-optimism-node = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-optimism-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }

# Reth test dependencies
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }

# Revmc dependencies
revmc = { git = "https://github.com/paradigmxyz/revmc", features = [
  "llvm-prefer-dynamic",
] }
revmc-build = { git = "https://github.com/paradigmxyz/revmc" }

# Allocators
tikv-jemallocator = "0.6.0"

# AI Inference dependencies
alith = { git = "https://github.com/0xLazAI/alith", tag = "v0.9.0", features = [
  "llamacpp",
] }

# Other dependencies
tracing = "0.1.41"
bincode = "2.0.1"
bitflags = "2.9.1"
bitvec = "1.0.1"
clap = { version = "4.5.40", features = ["derive"] }
criterion = "0.5.1"
dashmap = "6.1.0"
flate2 = "1.1.2"
rand = "0.9"
# rand 8 for secp256k1
rand_08 = { package = "rand", version = "0.8" }
rayon = "1.11.0"
reqwest = { version = "0.12.24", default-features = false, features = [
  "rustls-tls",
  "json",
] }
rustc-hash = "2.1.1"
serde = "1.0.217"
serde_json = "1.0.145"
smallvec = "1.15.1"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
walkdir = "2.5.0"
crossbeam = "0.8.4"
futures = "0.3"
futures-util = "0.3.31"
eyre = "0.6"
actix-web = "4.10.2"
num_cpus = "1.16.0"
pretty_assertions = "1"
secp256k1 = { version = "0.30", default-features = false, features = [
  "global-context",
  "recovery",
] }
jsonrpsee = "0.25.1"
indexmap = { version = "2.11.0", features = ["serde"] }

tokio-stream = "0.1.17"
hex = "0.4.3"
indicatif = "0.17"
hash-db = "0.15"
plain_hasher = "0.2"
triehash = "0.8"
k256 = { version = "0.13.3", features = ["ecdsa"] }
libloading = "0.8.9"
moka = { version = "0.12.10", features = ["sync"] }
either = "1.15.0"

# comefbft abci
tendermint = "*"
async-trait = "0.1.89"
tower = "0.5.2"
tower-abci = "*"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package]
proptest.opt-level = 3
rand_chacha.opt-level = 3
rand_xorshift.opt-level = 3
unarray.opt-level = 3

[profile.hivetests]
inherits = "test"
opt-level = 3
lto = "thin"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

[profile.bench]
inherits = "profiling"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
