[package]
name = "metis-chain"
version.workspace = true
edition.workspace = true

[dependencies]
metis-primitives.workspace = true
metis-pe.workspace = true

# Alloy and Revm dependencies
alloy-primitives.workspace = true
alloy-evm.workspace = true
alloy-hardforks.workspace = true
alloy-eips.workspace = true
alloy-sol-types.workspace = true
revm.workspace = true

# Reth dependencies
reth.workspace = true
reth-chainspec.workspace = true
reth-node-ethereum.workspace = true
reth-evm-ethereum.workspace = true
reth-evm.workspace = true
reth-primitives.workspace = true
reth-tracing.workspace = true
reth-ethereum.workspace = true
reth-cli-util.workspace = true

tokio.workspace = true
serde.workspace = true
futures = "0.3"
eyre = "0.6"
actix-web = "4.10.2"
num_cpus = "1.16.0"

# AI Inference dependencies
alith = { git = "https://github.com/0xLazAI/alith", tag = "v0.5.1", features = ["llamacpp"], optional = true }
tracing = "0.1.41"

[build-dependencies]
# Reth test dependencies
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.8" }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.8" }
# Revmc dependencies
revmc-build = { git = "https://github.com/paradigmxyz/revmc", optional = true }

[[bin]]
name = "metis"
path = "bin/main.rs"
doc = false

[features]
default = ["jemalloc"]

jemalloc = ["reth/jemalloc", "metis-pe/jemalloc"]
optimism = ["metis-pe/optimism"]
compiler = ["metis-pe/compiler", "dep:revmc-build"]
inference = ["dep:alith"]
