[package]
name = "metis-exex"

version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Commonly used types for exex usage in reth."

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-eips.workspace = true
serde = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }
arbitrary.workspace = true
bincode.workspace = true
rand.workspace = true

[features]
default = []
#serde = ["dep:serde", "reth-execution-types/serde"]
#serde-bincode-compat = ["reth-execution-types/serde-bincode-compat", "serde_with"]