[package]
name = "pevm"
edition.workspace = true
version.workspace = true

[features]
defaults = []

full = ["optimism", "rpc-storage"]

optimism = [
  "revm/optimism",
  "dep:op-alloy-consensus",
  "dep:op-alloy-network",
  "dep:op-alloy-rpc-types",
]

rpc-storage = [
  "dep:alloy-transport",
  "dep:alloy-transport-http",
  "dep:reqwest",
  "dep:tokio",
]

global-alloc = ["dep:rpmalloc", "dep:snmalloc-rs", "dep:tikv-jemallocator"]

[dependencies]
metis-primitives.workspace = true
metis-vm.workspace = true

alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-trie.workspace = true

bitflags.workspace = true
bitvec.workspace = true
dashmap.workspace = true
hashbrown.workspace = true
rustc-hash.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
revm.workspace = true

# OP dependencies
op-alloy-consensus = { workspace = true, optional = true }
op-alloy-network = { workspace = true, optional = true }
op-alloy-rpc-types = { workspace = true, optional = true }

# Storage RPC feature dependencies
alloy-transport = { workspace = true, optional = true }
alloy-transport-http = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

# Various allocators for benchmarks
rpmalloc = { workspace = true, optional = true }
snmalloc-rs = { workspace = true, optional = true }
tikv-jemallocator = { workspace = true, optional = true }

[dev-dependencies]
bincode.workspace = true
criterion.workspace = true
flate2.workspace = true
rand.workspace = true
rayon.workspace = true
reqwest.workspace = true
serde_json.workspace = true
walkdir.workspace = true

[lints]
workspace = true

[[bench]]
harness = false
name = "mainnet"

[[bench]]
harness = false
name = "gigagas"
