[package]
name = "metis-vm"
version.workspace = true
edition.workspace = true

[dependencies]
metis-primitives.workspace = true
alloy-sol-types.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rustc-hash.workspace = true
tokio.workspace = true

revm = { version = "19.6.0", features = ["std", "serde-json"] }
revmc = { git = "https://github.com/paradigmxyz/revmc", features = ["llvm-prefer-dynamic"], optional = true }
smallvec = "1.14.0"
libloading = "0.8.6"
lru = "0.13.0"
rocksdb = { version = "0.23.0", features = ["multi-threaded-cf"] }

[build-dependencies]
revmc-build = { git = "https://github.com/paradigmxyz/revmc"}

[features]
compiler = ["revmc"]
inference = []

[[example]]
name = "interpreter"

[[example]]
name = "aot_compiler"
required-features = ["compiler"]

[[example]]
name = "jit_compiler"
required-features = ["compiler"]
